# tdk-aws-integration

./: Dockerfile  README.md  app_entrypoint.sh  docker-compose.yaml
src/: package.sh
src/tdk_robokit_cloud/: package.xml  setup.cfg  setup.py
src/tdk_robokit_cloud/launch/: sensors_launch.py
src/tdk_robokit_cloud/tdk_robokit_cloud/: tdk_robokit_cloud_publisher.py
src/tdk_robokit_ctrl_robot_node/: CMakeLists.txt  package.xml
src/tdk_robokit_ctrl_sensor_node/: CMakeLists.txt  package.xml
src/tdk_robokit_ctrl_sensor_node/include/tdk_robokit_ctrl_sensor_node/: sensor_node.h
src/tdk_robokit_ctrl_sensor_node/src/: ads7052_publisher.cpp  ak09918_publisher.cpp  ch101_publisher.cpp  icm42622_publisher.cpp  icp10101_publisher.cpp  ics43434_publisher.cpp  ros_handlers_weak_hooks.cpp  tdk_robokit_publisher.cpp
src/tdk_robokit_driver/: CMakeLists.txt  package.xml
src/tdk_robokit_driver/include/tdk_robokit_driver/: messages.h  serial_interface.h
src/tdk_robokit_driver/src/: msg_handlers.c  serial_interface.c
src/tdk_robokit_interface/: CMakeLists.txt  package.xml
src/tdk_robokit_interface/msg/: AudioData.msg  Ch.msg  ChAlgo.msg  Imu.msg  InvnQuaternion.msg  ObstacleDetectionOut.msg  PdOut.msg  Pressure.msg  RangeData.msg  Status.msg
